# harmonyos-spatial-commerce

./: .gitignore  CLAUDE.md  TODO.md  p1-architecture.html  platform-map.html  waiting-1.html  welcome.html
.github/workflows/: build.yml
SpatialBoutique/: build-profile.json5
SpatialBoutique/AppScope/: app.json5
SpatialBoutique/AppScope/resources/base/element/: string.json
SpatialBoutique/entry/: build-profile.json5
SpatialBoutique/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
SpatialBoutique/entry/src/main/ets/common/: AppContext.ets  AppMode.ets  errors.ets
SpatialBoutique/entry/src/main/ets/components/: MaterialPicker.ets  ModelCard.ets  ShowcaseChrome.ets  TabBar.ets
SpatialBoutique/entry/src/main/ets/entryability/: EntryAbility.ets
SpatialBoutique/entry/src/main/ets/pages/: Index.ets  ListPage.ets  ProfilePage.ets  ScanPage.ets  ShowcasePage.ets
SpatialBoutique/entry/src/main/ets/recon/: CaptureKit.ets  MockCaptureKit.ets  ReconEngine.ets  (+1 more)
SpatialBoutique/entry/src/ohosTest/: module.json5  oh-package.json5
SpatialBoutique/hvigor/: hvigor-config.json5
docs/: notes-cloud-debug-signing-2026-06-27.md  notes-immersive-light-sense.md  notes-ndk-api-2026-06-25.md  plan-p1-device-integration-2026-06-23.md  plan-p1-foundation-2026-06-23.md  reference-deveco-config.md  spec-p1-2026-06-23.md  test-walkthrough-2026-06-25.md
pending-src/: README.md
pending-src/D1/: README.md
pending-src/D1/cpp/: CMakeLists.txt
pending-src/D2/: README.md
pending-src/D2/cpp/: CMakeLists.txt  napi_init.cpp
pending-src/entry/src/ohosTest/ets/: List.test.ets
(+18 files in other folders)
